repaired localization with locale files

--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -1,18 +1,18 @@
-About=O n\u00E1s
-Add\ Guest=Pridaj hos\u0165a
-Add\ Reservation=Pridaj rezerv\u00E1ciu
-Add\ Room=Pridaj izbu
-Delete\ Guest=Vyma\u017E hos\u0165a
-Delete\ Reservation=Vyma\u017E rezerv\u00E1ciu
-Delete\ Room=Vyma\u017E izbu
-Edit\ Guest=Uprav hos\u0165a
-Edit\ Reservation=Uprav rezerv\u00E1ciu
-Edit\ Room=Uprav izbu
-Find\ Empty\ Rooms=Vyh\u013Eadaj vo\u013En\u00E9 izby
-Find\ Guest\ Reservation=Vyh\u013Eadaj rezerv\u00E1cie hos\u0165a
-Find\ Room\ Reservation=Vyh\u013Eadaj rezerv\u00E1cie izby
-Guests=Hostia
-Home=Domov
-Reservations=Rezerv\u00E1cie
-Rooms=Izby
-This\ is\ home\ page\ for\ MIS...=Toto je domovsk\u00E1 str\u00E1nka pre MIS...
+About=O nas
+AddGuestBtn=Pridaj hosta
+AddReservationBtn=Pridaj rezervaciu
+AddRoomBtn=Add Room
+DeleteGuestBtn=Delete Guest
+DeleteReservationBtn=Delete Reservation
+DeleteRoomBtn=Delete Room
+EditGuestBtn=Edit Guest
+EditReservationBtn=Edit Reservation
+EditRoomBtn=Edit Room
+FindEmptyRoomsBtn=Find Empty Rooms
+FindGuestReservationBtn=Find Guest Reservation
+FindRoomReservationBtn=Find Room Reservation
+Guests=Guests
+Home=Home
+homePageTextArea1=This is home page for MIS...
+Reservations=Reservations
+Rooms=Rooms
