--- a/MIS-app/src/main/resources/texts_cs_CZ.properties
+++ b/MIS-app/src/main/resources/texts_cs_CZ.properties
@@ -1,18 +1,25 @@
+Home=Domov
+homePageTextArea1=This is home page for MIS...
 About=About
+about.authors=Authors: Vladim\u00EDr Me\u010Dko, D\u00E1vid Velik\u00FD
+about.version=Version: 1.1
+about.edited=Last Edited: 03.05.2017
+
+Guests=Guests
 AddGuestBtn=Add Guest
-AddReservationBtn=Add Reservation
-AddRoomBtn=Add Room
 DeleteGuestBtn=Delete Guest
-DeleteReservationBtn=Delete Reservation
-DeleteRoomBtn=Delete Room
 EditGuestBtn=Edit Guest
+
+Reservations=Reservations
+AddReservationBtn=Add Reservation
+DeleteReservationBtn=Delete Reservation
 EditReservationBtn=Edit Reservation
-EditRoomBtn=Edit Room
 FindEmptyRoomsBtn=Find Empty Rooms
 FindGuestReservationBtn=Find Guest Reservation
 FindRoomReservationBtn=Find Room Reservation
-Guests=Guests
-Home=Home
-homePageTextArea1=This is home page for MIS...
-Reservations=Reservations
+
 Rooms=Rooms
+AddRoomBtn=Add Room
+DeleteRoomBtn=Delete Room
+EditRoomBtn=Edit Room
+        
