--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -1,18 +1,25 @@
-About=O nas
-AddGuestBtn=Pridaj hosta
-AddReservationBtn=Pridaj rezervaciu
-AddRoomBtn=Add Room
-DeleteGuestBtn=Delete Guest
-DeleteReservationBtn=Delete Reservation
-DeleteRoomBtn=Delete Room
-EditGuestBtn=Edit Guest
-EditReservationBtn=Edit Reservation
-EditRoomBtn=Edit Room
-FindEmptyRoomsBtn=Find Empty Rooms
-FindGuestReservationBtn=Find Guest Reservation
-FindRoomReservationBtn=Find Room Reservation
-Guests=Guests
-Home=Home
-homePageTextArea1=This is home page for MIS...
-Reservations=Reservations
-Rooms=Rooms
+Home=Domov
+homePageTextArea1=Toto je domovsk\u00E1 str\u00E1nka pre MIS...
+About=O n\u00E1s
+about.authors=Autori: Vladim\u00EDr Me\u010Dko, D\u00E1vid Velik\u00FD
+about.version=Verzia: 1.1
+about.edited=Posledn\u00E1 edit\u00E1cia: 03.05.2017
+
+Guests=Hostia
+AddGuestBtn=Pridaj hos\u0165a
+DeleteGuestBtn=Vyma\u017E hos\u0165a
+EditGuestBtn=Uprav hos\u0165a
+
+Reservations=Rezerv\u00E1cie
+AddReservationBtn=Pridaj rezerv\u00E1ciu
+DeleteReservationBtn=Vyma\u017E rezerv\u00E1ciu
+EditReservationBtn=Uprav rezerv\u00E1ciu
+FindEmptyRoomsBtn=Vyh\u013Eadaj pr\u00E1zdne izby
+FindGuestReservationBtn=Vyh\u013Eadaj rezerv\u00E1cie hos\u0165a
+FindRoomReservationBtn=Vyh\u013Eadaj rezerv\u00E1cie izby
+
+Rooms=Izby
+AddRoomBtn=Pridaj izbu
+DeleteRoomBtn=Vyma\u017E izbu
+EditRoomBtn=Uprav izbu
+        
