--- a/MIS-app/src/main/resources/texts_en_US.properties
+++ b/MIS-app/src/main/resources/texts_en_US.properties
@@ -1,7 +1,7 @@
 Home=Home
 homePageTextArea1=This is home page for MIS...
 About=About
-about.authors=Authors: Vladim\u00EDr Me\u010Dko, D\u00E1vid Velik\u00FD
+about.authors=Authors: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
 about.version=Version: 1.1
 about.edited=Last Edited: 03.05.2017
 
@@ -9,6 +9,10 @@ Guests=Guests
 AddGuestBtn=Add Guest
 DeleteGuestBtn=Delete Guest
 EditGuestBtn=Edit Guest
+guestManager=guestManager
+phoneNumber=Phone number
+address=Address
+fullname=Full Name
 
 Reservations=Reservations
 AddReservationBtn=Add Reservation
@@ -17,9 +21,17 @@ EditReservationBtn=Edit Reservation
 FindEmptyRoomsBtn=Find Empty Rooms
 FindGuestReservationBtn=Find Guest Reservation
 FindRoomReservationBtn=Find Room Reservation
+reservationManager=reservationManager
+startTime=From
+endTime=To
+room=Room
+guest=Guest
+price=Price
 
 Rooms=Rooms
 AddRoomBtn=Add Room
 DeleteRoomBtn=Delete Room
 EditRoomBtn=Edit Room
-        
+id=id
+capacity=capacity
+roomNumber=room number
