--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -1,25 +1,38 @@
 Home=Domov
-homePageTextArea1=Toto je domovsk\u00E1 str\u00E1nka pre MIS...
-About=O n\u00E1s
-about.authors=Autori: Vladim\u00EDr Me\u010Dko, D\u00E1vid Velik\u00FD
+homePageTextArea1=Toto je domovsk\u00e1 str\u00e1nka pre MIS...
+About=O n\u00e1s
+about.authors=Autori: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
 about.version=Verzia: 1.1
-about.edited=Posledn\u00E1 edit\u00E1cia: 03.05.2017
+about.edited=Posledn\u00e1 edit\u00e1cia: 03.05.2017
 
 Guests=Hostia
 AddGuestBtn=Pridaj hos\u0165a
-DeleteGuestBtn=Vyma\u017E hos\u0165a
+DeleteGuestBtn=Vyma\u017e hos\u0165a
 EditGuestBtn=Uprav hos\u0165a
+guestManager=guestManager
+phoneNumber=Telef\u00f3nne \u010d\u00edslo
+address=Adresa
+fullname=Cel\u00e9 Meno
 
-Reservations=Rezerv\u00E1cie
-AddReservationBtn=Pridaj rezerv\u00E1ciu
-DeleteReservationBtn=Vyma\u017E rezerv\u00E1ciu
-EditReservationBtn=Uprav rezerv\u00E1ciu
-FindEmptyRoomsBtn=Vyh\u013Eadaj pr\u00E1zdne izby
-FindGuestReservationBtn=Vyh\u013Eadaj rezerv\u00E1cie hos\u0165a
-FindRoomReservationBtn=Vyh\u013Eadaj rezerv\u00E1cie izby
+Reservations=Rezerv\u00e1cie
+AddReservationBtn=Pridaj rezerv\u00e1ciu
+DeleteReservationBtn=Vyma\u017e rezerv\u00e1ciu
+EditReservationBtn=Uprav rezerv\u00e1ciu
+FindEmptyRoomsBtn=Vyh\u013eadaj pr\u00e1zdne izby
+FindGuestReservationBtn=Vyh\u013eadaj rezerv\u00e1cie hos\u0165a
+FindRoomReservationBtn=Vyh\u013eadaj rezerv\u00e1cie izby
+reservationManager=reservationManager
+startTime=Od
+endTime=Do
+room=Izba
+guest=Hos\u0165
+price=Cena
 
 Rooms=Izby
 AddRoomBtn=Pridaj izbu
-DeleteRoomBtn=Vyma\u017E izbu
+DeleteRoomBtn=Vyma\u017e izbu
 EditRoomBtn=Uprav izbu
-        
+roomManager=roomManager
+id=id
+capacity=kapacita
+roomNumber=\u010d\u00edslo izby       
