--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -4,6 +4,9 @@ About=O n\u00e1s
 about.authors=Autori: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
 about.version=Verzia: 1.1
 about.edited=Posledn\u00e1 edit\u00e1cia: 03.05.2017
+exit=Ukon\u010di\u0165
+save=Ulo\u017ei\u0165
+cancel=Zru\u0161i\u0165
 
 Guests=Hostia
 AddGuestBtn=Pridaj hos\u0165a
@@ -15,8 +18,8 @@ address=Adresa
 fullname=Cel\u00e9 Meno
 
 Reservations=Rezerv\u00e1cie
-AddReservationBtn=Pridaj rezerv\u00e1ciu
-DeleteReservationBtn=Vyma\u017e rezerv\u00e1ciu
+AddReservationBtn=Check-In
+DeleteReservationBtn=Check-Out
 EditReservationBtn=Uprav rezerv\u00e1ciu
 FindEmptyRoomsBtn=Vyh\u013eadaj pr\u00e1zdne izby
 FindGuestReservationBtn=Vyh\u013eadaj rezerv\u00e1cie hos\u0165a
