--- a/MIS-app/src/main/resources/texts_en_US.properties
+++ b/MIS-app/src/main/resources/texts_en_US.properties
@@ -4,6 +4,9 @@ About=About
 about.authors=Authors: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
 about.version=Version: 1.1
 about.edited=Last Edited: 03.05.2017
+exit=Exit
+save=Save
+cancel=Cancel
 
 Guests=Guests
 AddGuestBtn=Add Guest
@@ -15,8 +18,8 @@ address=Address
 fullname=Full Name
 
 Reservations=Reservations
-AddReservationBtn=Add Reservation
-DeleteReservationBtn=Delete Reservation
+AddReservationBtn=Check-In
+DeleteReservationBtn=Check-out
 EditReservationBtn=Edit Reservation
 FindEmptyRoomsBtn=Find Empty Rooms
 FindGuestReservationBtn=Find Guest Reservation
