MIS 1.5.2 - added button functionality

--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -16,6 +16,15 @@ guestManager=guestManager
 phoneNumber=Telef\u00f3nne \u010d\u00edslo
 address=Adresa
 fullname=Cel\u00e9 Meno
+notSelectGuest=Najprv je nutn\u00e9 vybra\u0165 hos\u0165a z tabu\u013eky host\u00ed.
+cantDeleteGuest=Nie je mo\u017en\u00e9 zmaza\u0165 hos\u0165a.
+reallyDeleteGuest=Naozaj chcete zmaza\u0165 hos\u0165a?
+enterNamepls=Field "Full Name" cannot be empty.
+requireName=You need to fill name into Form.
+enterAdresspls=Field "Address" cannot be empty.
+requireAddress=You need to fill address into Form.
+enterPhonepls=Field "Phone number" cannot be empty.
+requirePhone=You need to fill phone number into Form.
 
 Reservations=Rezerv\u00e1cie
 AddReservationBtn=Check-In
@@ -39,3 +48,9 @@ roomManager=roomManager
 id=id
 capacity=kapacita
 roomNumber=\u010d\u00edslo izby       
+notSelectRoom=Nebola vybran\u00e1 izba zo zoznamu.
+cantDeleteRoom=Nie je mo\u017en\u00e9 zmaza\u0165 izbu.
+reallyDeleteRoom=Naozaj chcete zmaza\u0165 izbu?
+roomNumberWarn1=Please lookup available (empty) rooms through
+roomNumberWarn2="Find Empty Rooms" button before selecting
+roomNumberWarn3=  room number.
