--- a/MIS-app/src/main/resources/texts_cs_CZ.properties
+++ b/MIS-app/src/main/resources/texts_cs_CZ.properties
@@ -16,6 +16,15 @@ guestManager=guestManager
 phoneNumber=Phone number
 address=Address
 fullname=Full Name
+notSelectGuest=You need to select guest from guest table first.
+cantDeleteGuest=Cannot delete the guest.
+reallyDeleteGuest=Do you really want to delete guest?
+enterNamepls=Field "Full Name" cannot be empty.
+requireName=You need to fill name into Form.
+enterAdresspls=Field "Address" cannot be empty.
+requireAddress=You need to fill address into Form.
+enterPhonepls=Field "Phone number" cannot be empty.
+requirePhone=You need to fill phone number into Form.
 
 Reservations=Reservations
 AddReservationBtn=Add Reservation
@@ -38,3 +47,9 @@ EditRoomBtn=Edit Room
 id=id
 capacity=kapacita
 roomNumber=\u010d\u00edslo izby       
+notSelectRoom=No room selected.
+cantDeleteRoom=Cannot delete the room.
+reallyDeleteRoom=Do you really want to delete the room?
+roomNumberWarn1=Please lookup available (empty) rooms through
+roomNumberWarn2="Find Empty Rooms" button before selecting
+roomNumberWarn3=  room number.
