MIS 1.5.2 - added button functionality

--- a/MIS-app/src/main/resources/texts_cs_CZ.properties
+++ b/MIS-app/src/main/resources/texts_cs_CZ.properties
@@ -27,6 +27,7 @@ enterPhonepls=Field "Phone number" cannot be empty.
 requirePhone=You need to fill phone number into Form.
 
 Reservations=Reservations
+createReservation=Create Reservation
 AddReservationBtn=Add Reservation
 DeleteReservationBtn=Delete Reservation
 EditReservationBtn=Edit Reservation
