--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -27,6 +27,7 @@ enterPhonepls=Field "Phone number" cannot be empty.
 requirePhone=You need to fill phone number into Form.
 
 Reservations=Rezerv\u00e1cie
+createReservation=Vytvorenie Rezerv\u00e1cie
 AddReservationBtn=Check-In
 DeleteReservationBtn=Check-Out
 EditReservationBtn=Uprav rezerv\u00e1ciu
