--- a/MIS-app/src/main/resources/texts_en_US.properties
+++ b/MIS-app/src/main/resources/texts_en_US.properties
@@ -27,6 +27,7 @@ enterPhonepls=Field "Phone number" cannot be empty.
 requirePhone=You need to fill phone number into Form.
 
 Reservations=Reservations
+createReservation=Create Reservation
 AddReservationBtn=Check-In
 DeleteReservationBtn=Check-out
 EditReservationBtn=Edit Reservation
