MIS 1.6.9 - updated texts

--- a/MIS-app/src/main/resources/texts_cs_CZ.properties
+++ b/MIS-app/src/main/resources/texts_cs_CZ.properties
@@ -7,6 +7,7 @@ about.edited=Last Edited: 03.05.2017
 exit=Exit
 save=Save
 cancel=Cancel
+continue=Continue
 
 Guests=Guests
 AddGuestBtn=Add Guest
@@ -40,6 +41,15 @@ endTime=To
 room=Room
 guest=Guest
 price=Price
+enterDatepls=One or both Dates are missing. Please select both dates.
+requireDate=You need to fill date into Form.
+dateError=Date error.
+fromLaterThanTo=End time is sooner than start time.
+badPrice=Price is in bad format.
+correctPrice=Please correct the given price in form.
+reallyDeleteRes=Do you really want to delete reservation?
+notSelectRes=Reservation in table not selected.
+cantCheckout=Can't check out guest.
 
 Rooms=Rooms
 AddRoomBtn=Add Room
@@ -54,3 +64,4 @@ reallyDeleteRoom=Do you really want to delete the room?
 roomNumberWarn1=Please lookup available (empty) rooms through
 roomNumberWarn2="Find Empty Rooms" button before selecting
 roomNumberWarn3=  room number.
+emptyRooms= Empty rooms.
