--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -2,11 +2,12 @@ Home=Domov
 homePageTextArea1=Toto je domovsk\u00e1 str\u00e1nka pre MIS...
 About=O n\u00e1s
 about.authors=Autori: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
-about.version=Verzia: 1.1
-about.edited=Posledn\u00e1 edit\u00e1cia: 03.05.2017
+about.version=Verzia: 1.7
+about.edited=Posledn\u00e1 edit\u00e1cia: 07.05.2017
 exit=Ukon\u010di\u0165
 save=Ulo\u017ei\u0165
 cancel=Zru\u0161i\u0165
+continue=Continue
 
 Guests=Hostia
 AddGuestBtn=Pridaj hos\u0165a
@@ -40,6 +41,15 @@ endTime=Do
 room=Izba
 guest=Hos\u0165
 price=Cena
+enterDatepls=One or both Dates are missing. Please select both dates.
+requireDate=You need to fill date into Form.
+dateError=Date error.
+fromLaterThanTo=End time is sooner than start time.
+badPrice=Price is in bad format.
+correctPrice=Please correct the given price in form.
+reallyDeleteRes=Do you really want to delete reservation?
+notSelectRes=Reservation in table not selected.
+cantCheckout=Can't check out guest.
 
 Rooms=Izby
 AddRoomBtn=Pridaj izbu
@@ -55,3 +65,4 @@ reallyDeleteRoom=Naozaj chcete zmaza\u0165 izbu?
 roomNumberWarn1=Please lookup available (empty) rooms through
 roomNumberWarn2="Find Empty Rooms" button before selecting
 roomNumberWarn3=  room number.
+emptyRooms= Empty rooms.
