MIS 1.7.0. - added logo/refactored code

--- a/MIS-app/src/main/resources/texts_sk_SK.properties
+++ b/MIS-app/src/main/resources/texts_sk_SK.properties
@@ -3,58 +3,58 @@ homePageTextArea1=Toto je domovsk\u00e1 str\u00e1nka pre MIS...
 About=O n\u00e1s
 about.authors=Autori: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
 about.version=Verzia: 1.7
-about.edited=Posledn\u00e1 edit\u00e1cia: 07.05.2017
+about.edited=Posledn\u00e1 edit\u00e1cia: 09.05.2017
 exit=Ukon\u010di\u0165
 save=Ulo\u017ei\u0165
 cancel=Zru\u0161i\u0165
-continue=Continue
+continue=Pokra\u010dova\u0165
 
 Guests=Hostia
-AddGuestBtn=Pridaj hos\u0165a
-DeleteGuestBtn=Vyma\u017e hos\u0165a
-EditGuestBtn=Uprav hos\u0165a
+AddGuestBtn=Prida\u0165 hos\u0165a
+DeleteGuestBtn=Vymaza\u0165 hos\u0165a
+EditGuestBtn=Upravi\u0165 hos\u0165a
 guestManager=guestManager
 phoneNumber=Telef\u00f3nne \u010d\u00edslo
 address=Adresa
-fullname=Cel\u00e9 Meno
+fullname=Cel\u00e9 meno
 notSelectGuest=Najprv je nutn\u00e9 vybra\u0165 hos\u0165a z tabu\u013eky host\u00ed.
 cantDeleteGuest=Nie je mo\u017en\u00e9 zmaza\u0165 hos\u0165a.
 reallyDeleteGuest=Naozaj chcete zmaza\u0165 hos\u0165a?
-enterNamepls=Field "Full Name" cannot be empty.
-requireName=You need to fill name into Form.
-enterAdresspls=Field "Address" cannot be empty.
-requireAddress=You need to fill address into Form.
-enterPhonepls=Field "Phone number" cannot be empty.
-requirePhone=You need to fill phone number into Form.
+enterNamepls=Pole "Cel\u00e9 meno" nem\u00f4\u017ee by\u0165 pr\u00e1zdne.
+requireName=Mus\u00edte vyplni\u0165 meno do formul\u00e1ra.
+enterAdresspls=Pole "Adresa" nem\u00f4\u017ee by\u0165 pr\u00e1zdne.
+requireAddress=Mus\u00edte vyplni\u0165 adresu do formul\u00e1ra.
+enterPhonepls=Pole "Telef\u00f3nne \u010d\u00edslo" nem\u00f4\u017ee by\u0165 pr\u00e1zdne.
+requirePhone=Mus\u00edte vyplni\u0165 telef\u00f3nne \u010d\u00edslo do formul\u00e1ra.
 
 Reservations=Rezerv\u00e1cie
-createReservation=Vytvorenie Rezerv\u00e1cie
-AddReservationBtn=Check-In
-DeleteReservationBtn=Check-Out
-EditReservationBtn=Uprav rezerv\u00e1ciu
-FindEmptyRoomsBtn=Vyh\u013eadaj pr\u00e1zdne izby
-FindGuestReservationBtn=Vyh\u013eadaj rezerv\u00e1cie hos\u0165a
-FindRoomReservationBtn=Vyh\u013eadaj rezerv\u00e1cie izby
+createReservation=Vytvori\u0165 rezerv\u00e1ciu
+AddReservationBtn=Prida\u0165 rezerv\u00e1ciu
+DeleteReservationBtn=Vymaza\u0165 rezerv\u00e1ciu
+EditReservationBtn=Upravi\u0165 rezerv\u00e1ciu
+FindEmptyRoomsBtn=Vyh\u013eada\u0165 pr\u00e1zdne izby
+FindGuestReservationBtn=Vyh\u013eada\u0165 rezerv\u00e1cie hos\u0165a
+FindRoomReservationBtn=Vyh\u013eada\u0165 rezerv\u00e1cie izby
 reservationManager=reservationManager
 startTime=Od
 endTime=Do
 room=Izba
 guest=Hos\u0165
 price=Cena
-enterDatepls=One or both Dates are missing. Please select both dates.
-requireDate=You need to fill date into Form.
-dateError=Date error.
-fromLaterThanTo=End time is sooner than start time.
-badPrice=Price is in bad format.
-correctPrice=Please correct the given price in form.
-reallyDeleteRes=Do you really want to delete reservation?
-notSelectRes=Reservation in table not selected.
-cantCheckout=Can't check out guest.
+enterDatepls=Jeden alebo oba d\u00e1tumy ch\u00fdbaj\u00fa. Zvo\u013ete pros\u00edm oba d\u00e1tumy.
+requireDate=Mus\u00edte vyplni\u0165 d\u00e1tum do formul\u00e1ra.
+dateError=Chybn\u00fd d\u00e1tum.
+fromLaterThanTo=V "Do" mus\u00ed by\u0165 v\u00e4\u010d\u0161ia hodnota ako v "Od".
+badPrice=Cena je v zlom form\u00e1te.
+correctPrice=Pros\u00edm upravte cenu vo formul\u00e1ri.
+reallyDeleteRes=Naozaj chcete zmaza\u0165 rezerv\u00e1ciu?
+notSelectRes=Rezerv\u00e1cia nie je v tabu\u013eke vybrat\u00e1.
+cantCheckout=Nie je mo\u017en\u00e9 odhl\u00e1si\u0165 hos\u0165a.
 
 Rooms=Izby
-AddRoomBtn=Pridaj izbu
-DeleteRoomBtn=Vyma\u017e izbu
-EditRoomBtn=Uprav izbu
+AddRoomBtn=Prida\u0165 izbu
+DeleteRoomBtn=Vymaza\u0165 izbu
+EditRoomBtn=Upravi\u0165 izbu
 roomManager=roomManager
 id=id
 capacity=kapacita
@@ -62,9 +62,13 @@ roomNumber=\u010d\u00edslo izby
 notSelectRoom=Nebola vybran\u00e1 izba zo zoznamu.
 cantDeleteRoom=Nie je mo\u017en\u00e9 zmaza\u0165 izbu.
 reallyDeleteRoom=Naozaj chcete zmaza\u0165 izbu?
-roomNumberWarn1=Please lookup available (empty) rooms through
-roomNumberWarn2="Find Empty Rooms" button before selecting
-roomNumberWarn3=  room number.
-emptyRooms= Empty rooms.
-roomAlreadyAdded=Room already added.
-roomAdded=Room is already added.
+roomNumberWarn1=Pros\u00edm pozrite si dostupn\u00e9 (pr\u00e1zdne) izby.
+roomNumberWarn2=Kliknite na "Vyh\u013eada\u0165 pr\u00e1zdne izby" pred v\u00fdberom.
+roomNumberWarn3=  \u010d\u00edslo izby.
+emptyRooms= Vo\u013en\u00e9 izby.
+roomAlreadyAdded=Izba u\u017e bola pridan\u00e1.
+roomAdded=Izba u\u017e bola pridan\u00e1.
+chooseRoompls=Najprv vyberte izbu.
+chooseRoom=Vyberte izbu pros\u00edm.
+chooseGuestpls=Najprv vyberte hos\u0165a.
+chooseGuest=Vyberte hos\u0165a pros\u00edm.
