--- a/MIS-app/src/main/resources/texts_cs_CZ.properties
+++ b/MIS-app/src/main/resources/texts_cs_CZ.properties
@@ -1,69 +1,74 @@
-Home=Domov
-homePageTextArea1=This is home page for MIS...
-About=About
-about.authors=Authors: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
-about.version=Version: 1.1
-about.edited=Last Edited: 03.05.2017
-exit=Exit
-save=Save
-cancel=Cancel
-continue=Continue
+Home=Dom\u016f
+homePageTextArea1=Tohle je domovsk\u00e1 str\u00e1nka pro MIS...
+About=O n\u00e1s
+about.authors=Autori: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
+about.version=Verze: 1.7
+about.edited=Posledn\u00e1 editace: 09.05.2017
+exit=Ukon\u010dit
+save=Ulo\u017eit
+cancel=Zru\u0161it
+continue=Pokra\u010dovat
 
-Guests=Guests
-AddGuestBtn=Add Guest
-DeleteGuestBtn=Delete Guest
-EditGuestBtn=Edit Guest
+Guests=Host\u00e9
+AddGuestBtn=P\u0159idat hosta
+DeleteGuestBtn=Smazat hosta
+EditGuestBtn=Upravit hosta
 guestManager=guestManager
-phoneNumber=Phone number
-address=Address
-fullname=Full Name
-notSelectGuest=You need to select guest from guest table first.
-cantDeleteGuest=Cannot delete the guest.
-reallyDeleteGuest=Do you really want to delete guest?
-enterNamepls=Field "Full Name" cannot be empty.
-requireName=You need to fill name into Form.
-enterAdresspls=Field "Address" cannot be empty.
-requireAddress=You need to fill address into Form.
-enterPhonepls=Field "Phone number" cannot be empty.
-requirePhone=You need to fill phone number into Form.
+phoneNumber=Telefonn\u00ed \u010d\u00edslo
+address=Adresa
+fullname=Cel\u00e9 jm\u00e9no
+notSelectGuest=Nejprve mus\u00edte vybrat hosta z tabulky host\u016f.
+cantDeleteGuest=Nelze smazat hosta.
+reallyDeleteGuest=Opravdu chcete smazat hosta?
+enterNamepls=Pole "Cel\u00e9 jm\u00e9no" nem\u016f\u017ee b\u00fdt pr\u00e1zdn\u00fd.
+requireName=Mus\u00edte vyplnit jm\u00e9no do formul\u00e1\u0159e.
+enterAdresspls=Pole "Adresa" nem\u016f\u017ee b\u00fdt pr\u00e1zdn\u00fd.
+requireAddress=Mus\u00edte vyplnit adresu do formul\u00e1\u0159e.
+enterPhonepls=Pole "Telefonn\u00ed \u010d\u00edslo" nem\u016f\u017ee b\u00fdt pr\u00e1zdn\u00fd.
+requirePhone=Mus\u00edte vyplnit telefonn\u00ed \u010d\u00edslo do formul\u00e1\u0159e.
 
-Reservations=Reservations
-createReservation=Create Reservation
-AddReservationBtn=Add Reservation
-DeleteReservationBtn=Delete Reservation
-EditReservationBtn=Edit Reservation
-FindEmptyRoomsBtn=Find Empty Rooms
-FindGuestReservationBtn=Find Guest Reservation
-FindRoomReservationBtn=Find Room Reservation
+Reservations=Rezervace
+createReservation=Vytvorit rezervaci
+AddReservationBtn=P\u0159idat rezervaci
+DeleteReservationBtn=Smazat rezervaci
+EditReservationBtn=Upravit rezervaci
+FindEmptyRoomsBtn=Naj\u00edt voln\u00e9 pokoje
+FindGuestReservationBtn=Naj\u00edt rezervace hosta
+FindRoomReservationBtn=Naj\u00edt rezervace pokoje
 reservationManager=reservationManager
-startTime=From
-endTime=To
-room=Room
-guest=Guest
-price=Price
-enterDatepls=One or both Dates are missing. Please select both dates.
-requireDate=You need to fill date into Form.
-dateError=Date error.
-fromLaterThanTo=End time is sooner than start time.
-badPrice=Price is in bad format.
-correctPrice=Please correct the given price in form.
-reallyDeleteRes=Do you really want to delete reservation?
-notSelectRes=Reservation in table not selected.
-cantCheckout=Can't check out guest.
+startTime=Od
+endTime=Do
+room=Pokoj
+guest=Host
+price=Cena
+enterDatepls=Jeden nebo oba daty chyb\u00ed. Zvolte pros\u00edm ob\u011b data.
+requireDate=Mus\u00edte vyplnit datum do formul\u00e1\u0159e.
+dateError=Chybn\u00fd datum.
+fromLaterThanTo=V "Do" mus\u00ed b\u00fdt v\u011bt\u0161\u00ed hodnota ne\u017e v "Od".
+badPrice=Cena je ve \u0161patn\u00e9m form\u00e1tu.
+correctPrice=Prosim upravte cenu ve formula\u0159i.
+reallyDeleteRes=Opravdu chcete smazat rezervaci?
+notSelectRes=Rezervace nen\u00ed v tabulce vybr\u00e1na.
+cantCheckout=Nelze odhl\u00e1sit hosta.
 
-Rooms=Rooms
-AddRoomBtn=Add Room
-DeleteRoomBtn=Delete Room
-EditRoomBtn=Edit Room
+Rooms=Pokoje
+AddRoomBtn=P\u0159idat pokoj
+DeleteRoomBtn=Smazat pokoj
+EditRoomBtn=Upravit pokoj
 id=id
 capacity=kapacita
-roomNumber=\u010d\u00edslo izby       
-notSelectRoom=No room selected.
-cantDeleteRoom=Cannot delete the room.
-reallyDeleteRoom=Do you really want to delete the room?
-roomNumberWarn1=Please lookup available (empty) rooms through
-roomNumberWarn2="Find Empty Rooms" button before selecting
-roomNumberWarn3=  room number.
-emptyRooms= Empty rooms.
-roomAlreadyAdded=Room already added.
-roomAdded=Room is already added.
+roomNumber=\u010d\u00edslo pokoje       
+notSelectRoom=Nen\u00ed vybr\u00e1n \u017e\u00e1dn\u00fd pokoj.
+cantDeleteRoom=Nelze smazat pokoj.
+reallyDeleteRoom=Opravdu chcete smazat pokoj?
+roomNumberWarn1=Prosim prohl\u00e9dn\u011bte si dostupn\u00e9 (pr\u00e1zdn\u00e9) pokoje.
+roomNumberWarn2=Klikn\u011bte na "Naj\u00edt voln\u00e9 pokoje" pred v\u00fdb\u011brem.
+roomNumberWarn3=  \u010d\u00edslo pokoje.
+emptyRooms= Voln\u00e9 pokoje.
+roomAlreadyAdded=Pokoj ji\u017e byl p\u0159id\u00e1n.
+roomAdded=Pokoj ji\u017e byl p\u0159id\u00e1n.
+roomManager=roomManager
+chooseRoompls=Vyberte nejd\u0159\u00edv pokoj.
+chooseRoom=Vyberte pokoj pros\u00edm.
+chooseGuestpls=Vyberte nejd\u0159\u00edv hosta.
+chooseGuest=Vyberte hosta pros\u00edm.
