--- a/MIS-app/src/main/resources/texts_en_US.properties
+++ b/MIS-app/src/main/resources/texts_en_US.properties
@@ -2,8 +2,8 @@ Home=Home
 homePageTextArea1=This is home page for MIS...
 About=About
 about.authors=Authors: Vladim\u00edr Me\u010dko, D\u00e1vid Velik\u00fd
-about.version=Version: 1.1
-about.edited=Last Edited: 03.05.2017
+about.version=Version: 1.7
+about.edited=Last Edited: 09.05.2017
 exit=Exit
 save=Save
 cancel=Cancel
@@ -59,6 +59,7 @@ id=id
 capacity=capacity
 roomNumber=room number
 notSelectRoom=No room selected.
+roomManager=roomManager
 cantDeleteRoom=Cannot delete the room.
 reallyDeleteRoom=Do you really want to delete the room?
 roomNumberWarn1=Please lookup available (empty) rooms through
@@ -67,3 +68,7 @@ roomNumberWarn3=  room number.
 emptyRooms= Empty rooms.
 roomAlreadyAdded=Room already added.
 roomAdded=Room is already added.
+chooseRoompls=Choose room first.
+chooseRoom=Choose room please.
+chooseGuestpls=Choose guest first.
+chooseGuest=Choose guest please.
